--- a/dome/game1.html
+++ b/dome/game1.html
@@ -9,7 +9,7 @@
   <title>Document</title>
   <style>
 	*{margin:0;padding:0}
-	body{background:#000}
+	body{background:#000;overflow:hidden;}
 	#wrap{margin:200px auto;position:relative}
 	#wrap div{width:50px;height:50px;float:left}
 	.map0{ background:#666;}
