--- a/dome/frame2.html
+++ b/dome/frame2.html
@@ -6,34 +6,23 @@
 </head>
 
 <body>
-	<div id="wrap">
-			<div class="mm1"><img src="img/bc1.jpg" width="720" height="400" /></div>
-			<div class="mm1"><img src="img/bc2.jpg" width="720" height="400" /></div>
-			<div class="mm1"><img src="img/bc3.jpg" width="720" height="400" /></div>
-			<div class="mm1"><img src="img/bc4.jpg" width="720" height="400" /></div>
-			<div class="mm2"><img src="img/bc1.jpg" width="720" height="400" /></div>
-			<div class="mm2"><img src="img/bc2.jpg" width="720" height="400" /></div>
-			<div class="mm2"><img src="img/bc3.jpg" width="720" height="400" /></div>
-			<div class="mm2"><img src="img/bc4.jpg" width="720" height="400" /></div>
-			<div class="mm3"><img src="img/bc1.jpg" width="720" height="400" /></div>
-			<div class="mm3"><img src="img/bc2.jpg" width="720" height="400" /></div>
-			<div class="mm3"><img src="img/bc3.jpg" width="720" height="400" /></div>
-			<div class="mm3"><img src="img/bc4.jpg" width="720" height="400" /></div>
-			<div class="mm4"><img src="img/bc1.jpg" width="720" height="400" /></div>
-			<div class="mm4"><img src="img/bc2.jpg" width="720" height="400" /></div>
-			<div class="mm4"><img src="img/bc3.jpg" width="720" height="400" /></div>
-			<div class="mm4"><img src="img/bc4.jpg" width="720" height="400" /></div>
-			<div class="mm5"><img src="img/bc1.jpg" width="720" height="400" /></div>
-			<div class="mm5"><img src="img/bc2.jpg" width="720" height="400" /></div>
-			<div class="mm5"><img src="img/bc3.jpg" width="720" height="400" /></div>
-			<div class="mm5"><img src="img/bc4.jpg" width="720" height="400" /></div>
-			<div class="mm6"><img src="img/bc1.jpg" width="720" height="400" /></div>
-			<div class="mm6"><img src="img/bc2.jpg" width="720" height="400" /></div>
-			<div class="mm6"><img src="img/bc3.jpg" width="720" height="400" /></div>
-			<div class="mm6"><img src="img/bc4.jpg" width="720" height="400" /></div>
 	
+	<div id="wrap1">
 	</div>
 	<script src="js/jquery-1.11.1.min.js"></script>
-    <script src="js/frame2.js"></script>
+	<script src="js/frame_2.js"></script>
+    <script>
+    window.onload=function(){
+    	var a=new frame2({
+    		wrap:"wrap1",
+    		img1:"img/bc1.jpg",
+    		img2:"img/bc2.jpg",
+    		img3:"img/bc3.jpg",
+    		img4:"img/bc4.jpg",
+    		split:20,
+    		times:3000
+    	});
+    }
+    </script>
 </body>
 </html>
