--- a/dome/index.html
+++ b/dome/index.html
@@ -82,16 +82,14 @@
 	<div id="header">
 		<div class="nav center">
 			<ul>
-				<li><a href="javascript:vold">注册</a></li>
-				<li><a href="javascript:vold">登陆</a></li>
+				<li><a href="#">注册</a></li>
+				<li><a href="#">登陆</a></li>
 				<li class="search">
 					<form>
 						<input id="text" type="text"></input>
-						
 						<input class="textimg" type="submit" value=""></input>
 						<label for="text" class="label">请输入搜索内容</label>
 					</form>
-					
 				</li>
 			</ul>
 			<div class="img"></div>
