--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
     <div class="div1">CSS3</div>
     <div class="div1">WEB</div>
     <div class="div1">WEB</div>
-    <div class="div1">WEB</div>
     <div class="div1">JS</div>
     <div class="div1">Canvas</div>
     <div class="div1">Canvas</div>
@@ -28,6 +27,7 @@
     <div class="div1">Mweb</div>
     <div class="div1">Mweb</div>
     <div class="div1">WEB</div>
+    <div class="div1">JS</div>
     <div class="div1">null</div>
     <div class="div1">null</div>
     <div class="div1">null</div>
