--- a/dome/test.html
+++ b/dome/test.html
@@ -40,7 +40,7 @@
 			xmlhttp.send();
 			xmlhttp.onreadystatechange=function(){
 			    if (xmlhttp.readyState==4 && xmlhttp.status==200){
-			    	alert(xmlhttp.responseText);
+			    	console.log(xmlhttp.responseText);
 			    }
 			}
 
