--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div class="div1">Mweb</div>
     <div class="div1">WEB</div>
     <div class="div1">JS</div>
-    <div class="div1">AJAX</div>
+    <div class="div1">null</div>
     <div class="div1">null</div>
     <div class="div1">null</div>
     <div class="div1">null</div>
