--- a/index.html
+++ b/index.html
@@ -11,21 +11,21 @@
 <div class="s3">Style3</div>
 <div class='mynote'><a target='_blank' href='myNote/note.html'>MyNote</a></div>
 <div class="wrap">
-    <div class="div1">CSS3</div>
-    <div class="div1">CSS3</div>
     <div class="div1">JQ</div>
     <div class="div1">JQ</div>
-    <div class="div1">CSS3</div>
+    <div class="div1">JQ</div>
+    <div class="div1">JQ</div>
+    <div class="div1">H5</div>
     <div class="div1">WEB</div>
     <div class="div1">WEB</div>
     <div class="div1">JS</div>
-    <div class="div1">Canvas</div>
-    <div class="div1">Canvas</div>
-    <div class="div1">Canvas</div>
+    <div class="div1">H5</div>
+    <div class="div1">H5</div>
+    <div class="div1">H5</div>
     <div class="div1">JS</div>
     <div class="div1">JS</div>
-    <div class="div1">Mweb</div>
-    <div class="div1">Mweb</div>
+    <div class="div1">WEB</div>
+    <div class="div1">WEB</div>
     <div class="div1">WEB</div>
     <div class="div1">JS</div>
     <div class="div1">null</div>
