--- a/dome/mt/game.html
+++ b/dome/mt/game.html
@@ -231,7 +231,9 @@
             }
 
         }
-        game.exe();
+        window.onload=function(){
+            game.exe();
+        };
         
     </script>
  </body>
